--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,13 +94,13 @@ build-fat-jar:
     - gradle bootJar
 
 build-push-docker-image:
-  image: docker:latest
+  image: docker:docker:cli
   needs: [ "build-fat-jar" ]
   stage: build-push-docker-image
   when: manual
   before_script:
     - cd submission/submission-webapp && mkdir -p build/dependency
-    - cd build/dependency && jar -xf ../libs/submission-webapp-1.0.0.jar && cd submission/submission-webapp
+    - cd build/dependency && jar -xf ../libs/submission-webapp-1.0.0.jar && cd .. && cd ..
     - docker login dockerhub.ebi.ac.uk -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
   script:
     - docker build -t dockerhub.ebi.ac.uk/jcamilorada/sumitter:$CI_COMMIT_SHA .
