--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,9 +100,8 @@ build-push-docker-image:
   when: manual
   before_script:
     - cd submission/submission-webapp && mkdir -p build/dependency
-    - cd build/dependency && jar -xf ../libs/submission-webapp-1.0.0.jar
+    - cd build/dependency && jar -xf ../libs/submission-webapp-1.0.0.jar && cd .. && cd ..
     - docker login dockerhub.ebi.ac.uk -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
   script:
-    - cd submission/submission-webapp
     - docker build -t dockerhub.ebi.ac.uk/jcamilorada/sumitter:$CI_COMMIT_SHA .
     - docker push dockerhub.ebi.ac.uk/jcamilorada/sumitter:$CI_COMMIT_SHA
