--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,6 +92,8 @@ build-fat-jar:
     - cd submission/submission-webapp
   script:
     - gradle bootJar
+    - mkdir -p build/dependency
+    - cd build/dependency && jar -xf ../libs/submission-webapp-1.0.0.jar && cd .. && cd ..
 
 build-push-docker-image:
   image: docker:cli
@@ -99,9 +101,8 @@ build-push-docker-image:
   stage: build-push-docker-image
   when: manual
   before_script:
-    - cd submission/submission-webapp && mkdir -p build/dependency
-    - cd build/dependency && jar -xf ../libs/submission-webapp-1.0.0.jar && cd .. && cd ..
     - docker login dockerhub.ebi.ac.uk -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
   script:
-    - docker build -t dockerhub.ebi.ac.uk/jcamilorada/sumitter:$CI_COMMIT_SHA .
-    - docker push dockerhub.ebi.ac.uk/jcamilorada/sumitter:$CI_COMMIT_SHA
+    - cd submission/submission-webapp
+    - docker build -t dockerhub.ebi.ac.uk/jcamilorada/submitter:$CI_COMMIT_SHA .
+    - docker push dockerhub.ebi.ac.uk/jcamilorada/submitter:$CI_COMMIT_SHA
