--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,7 @@ fire-caos-itest:
     ITEST_FAIL_FACTOR: "8"
 
 build-fat-jar:
-  needs: [ "build-test" ]
+#  needs: [ "build-test" ]
   stage: build-fat-jar
   when: manual
   before_script:
@@ -93,7 +93,7 @@ build-fat-jar:
   script:
     - gradle bootJar
     - mkdir -p build/dependency
-    - cd build/dependency && jar -xf ../libs/submission-webapp-1.0.0.jar && cd .. && cd ..
+    - cd build/dependency && jar -xf ../libs/submission-webapp-1.0.0.jar && ls && cd .. && cd ..
 
 build-push-docker-image:
   image: docker:cli
