--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,72 +17,72 @@ include:
   - local: '/ci/submission-handlers.yml'
 
 stages:
-  - build-test
-  - nfs-itest
-  - fire-itest
-  - fire-caos-itest
-  - auto-deploy-dev-bio-commandline
-  - auto-deploy-beta-bio-commandline
-  - auto-deploy-prod-bio-commandline
-  - auto-deploy-dev-submitter
-  - auto-deploy-beta-submitter
-  - auto-deploy-prod-submitter
-  - auto-deploy-sandbox-submitter
-  - auto-deploy-dev-handlers
-  - auto-deploy-beta-handlers
-  - auto-deploy-prod-handlers
-  - auto-deploy-sandbox-handlers
-  - auto-deploy-prod-scheduler
-  - auto-deploy-prod-exporter-task
-  - auto-deploy-prod-releaser-task
-  - auto-deploy-prod-pmc-processor-task
-  - deploy-dev-submitter
-  - deploy-beta-submitter
-  - deploy-prod-submitter
-  - deploy-sandbox-submitter
-  - deploy-dev-pmc-processor-task
-  - deploy-beta-pmc-processor-task
-  - deploy-prod-pmc-processor-task
-  - deploy-dev-exporter-task
-  - deploy-beta-exporter-task
-  - deploy-prod-exporter-task
-  - deploy-dev-releaser-task
-  - deploy-beta-releaser-task
-  - deploy-prod-releaser-task
-  - deploy-dev-scheduler
-  - deploy-beta-scheduler
-  - deploy-prod-scheduler
-  - deploy-bio-admin
-  - deploy-dev-bio-commandline
-  - deploy-beta-bio-commandline
-  - deploy-prod-bio-commandline
-  - deploy-dev-handlers
-  - deploy-beta-handlers
-  - deploy-prod-handlers
-  - deploy-sandbox-handlers
+#  - build-test
+#  - nfs-itest
+#  - fire-itest
+#  - fire-caos-itest
+#  - auto-deploy-dev-bio-commandline
+#  - auto-deploy-beta-bio-commandline
+#  - auto-deploy-prod-bio-commandline
+#  - auto-deploy-dev-submitter
+#  - auto-deploy-beta-submitter
+#  - auto-deploy-prod-submitter
+#  - auto-deploy-sandbox-submitter
+#  - auto-deploy-dev-handlers
+#  - auto-deploy-beta-handlers
+#  - auto-deploy-prod-handlers
+#  - auto-deploy-sandbox-handlers
+#  - auto-deploy-prod-scheduler
+#  - auto-deploy-prod-exporter-task
+#  - auto-deploy-prod-releaser-task
+#  - auto-deploy-prod-pmc-processor-task
+#  - deploy-dev-submitter
+#  - deploy-beta-submitter
+#  - deploy-prod-submitter
+#  - deploy-sandbox-submitter
+#  - deploy-dev-pmc-processor-task
+#  - deploy-beta-pmc-processor-task
+#  - deploy-prod-pmc-processor-task
+#  - deploy-dev-exporter-task
+#  - deploy-beta-exporter-task
+#  - deploy-prod-exporter-task
+#  - deploy-dev-releaser-task
+#  - deploy-beta-releaser-task
+#  - deploy-prod-releaser-task
+#  - deploy-dev-scheduler
+#  - deploy-beta-scheduler
+#  - deploy-prod-scheduler
+#  - deploy-bio-admin
+#  - deploy-dev-bio-commandline
+#  - deploy-beta-bio-commandline
+#  - deploy-prod-bio-commandline
+#  - deploy-dev-handlers
+#  - deploy-beta-handlers
+#  - deploy-prod-handlers
+#  - deploy-sandbox-handlers
   - build-fat-jar
   - build-push-docker-image
 
-build-test:
-  stage: build-test
-  script: gradle clean build test -x itest -x jacocoTestCoverageVerification buildArtifacts --info
-
-nfs-itest:
-  needs: [ "build-test" ]
-  stage: nfs-itest
-  script: gradle clean :submission:submission-webapp:itest -PenableFire=false --rerun-tasks --stacktrace
-
-fire-itest:
-  needs: [ "build-test" ]
-  stage: fire-itest
-  script: gradle clean :submission:submission-webapp:itest -PenableFire=true --rerun-tasks --stacktrace
-
-fire-caos-itest:
-  needs: [ "build-test" ]
-  stage: fire-caos-itest
-  script: gradle clean :submission:submission-webapp:itest -PenableFire=true --rerun-tasks --stacktrace
-  variables:
-    ITEST_FAIL_FACTOR: "8"
+#build-test:
+#  stage: build-test
+#  script: gradle clean build test -x itest -x jacocoTestCoverageVerification buildArtifacts --info
+#
+#nfs-itest:
+#  needs: [ "build-test" ]
+#  stage: nfs-itest
+#  script: gradle clean :submission:submission-webapp:itest -PenableFire=false --rerun-tasks --stacktrace
+#
+#fire-itest:
+#  needs: [ "build-test" ]
+#  stage: fire-itest
+#  script: gradle clean :submission:submission-webapp:itest -PenableFire=true --rerun-tasks --stacktrace
+#
+#fire-caos-itest:
+#  needs: [ "build-test" ]
+#  stage: fire-caos-itest
+#  script: gradle clean :submission:submission-webapp:itest -PenableFire=true --rerun-tasks --stacktrace
+#  variables:
+#    ITEST_FAIL_FACTOR: "8"
 
 build-fat-jar:
 #  needs: [ "build-test" ]
