before adding step to create prod images

--- a/ci/docker.yml
+++ b/ci/docker.yml
@@ -1,6 +1,6 @@
 build-fat-jar:
   needs: [ "build-test" ]
-  stage: build-push-docker-image
+  stage: build-fat-jar
   when: manual
   script:
     - cd submission/submission-webapp
@@ -12,8 +12,7 @@ build-fat-jar:
 
 build-push-docker-image:
   image: docker:cli
-  needs:
-    - build-fat-jar
+  needs: [ "build-fat-jar" ]
   stage: build-push-docker-image
   variables:
     SUBMITTER_IMAGE: dockerhub.ebi.ac.uk/jcamilorada/biostudies-backend-service/submitter:$CI_COMMIT_SHA-SNAPSHOT
