--- a/ci/docker.yml
+++ b/ci/docker.yml
@@ -12,7 +12,10 @@ build-fat-jar:
 
 build-push-docker-image:
   image: docker:cli
-  needs: [ "build-fat-jar" ]
+  dependencies:
+    - build-fat-jar
+  rules:
+    - when: on_success
   stage: docker-image
   variables:
     SUBMITTER_IMAGE: dockerhub.ebi.ac.uk/jcamilorada/biostudies-backend-service/submitter:$CI_COMMIT_SHA-SNAPSHOT
