--- a/ci/docker.yml
+++ b/ci/docker.yml
@@ -1,6 +1,6 @@
 build-fat-jar:
   needs: [ "build-test" ]
-  stage: docker-image
+  stage: build-fat-jar
   when: manual
   script:
     - cd submission/submission-webapp
@@ -12,16 +12,13 @@ build-fat-jar:
 
 build-push-docker-image:
   image: docker:cli
-  dependencies:
-    - build-fat-jar
-  rules:
-    - when: on_success
-  stage: docker-image
+  needs: [ "build-fat-jar" ]
+  stage: build-push-docker-image
   variables:
-    SUBMITTER_IMAGE: dockerhub.ebi.ac.uk/jcamilorada/biostudies-backend-service/submitter:$CI_COMMIT_SHA-SNAPSHOT
+    SNAPSHOT_IMAGE: dockerhub.ebi.ac.uk/jcamilorada/biostudies-backend-service/submitter:$CI_COMMIT_SHA-SNAPSHOT
   before_script:
     - docker login $CI_REGISTRY -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
   script:
     - cd submission/submission-webapp
-    - docker build -t $SUBMITTER_IMAGE .
-    - docker push $SUBMITTER_IMAGE
+    - docker build -t $SNAPSHOT_IMAGE .
+    - docker push $SNAPSHOT_IMAGE
