--- a/ci/submitter.yml
+++ b/ci/submitter.yml
@@ -65,3 +65,30 @@ deploy-sandbox-submitter:
   extends: .deploy-sandbox-submitter
   stage: deploy-sandbox-submitter
   when: manual
+
+build-fat-jar-prod:
+  needs: [ "deploy-prod-submitter" ]
+  stage: build-fat-jar-prod
+  script:
+    - cd submission/submission-webapp
+    - gradle bootJar
+    - mkdir -p build/dependency && cd build/dependency && jar -xf ../libs/submission-webapp-1.0.0.jar
+  artifacts:
+    paths:
+      - submission/submission-webapp/build/dependency
+
+build-push-docker-image-prod:
+  image: docker:cli
+  needs: [ "build-fat-jar-prod" ]
+  stage: build-push-docker-image-prod
+  variables:
+    COMMIT_IMAGE: dockerhub.ebi.ac.uk/jcamilorada/biostudies-backend-service/submitter:$CI_COMMIT_SHA
+    LATEST_IMAGE: dockerhub.ebi.ac.uk/jcamilorada/biostudies-backend-service/submitter:latest
+  before_script:
+    - docker login $CI_REGISTRY -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
+  script:
+    - cd submission/submission-webapp
+    - docker build -t COMMIT_IMAGE .
+    - docker build -t LATEST_IMAGE .
+    - docker push COMMIT_IMAGE
+    - docker push LATEST_IMAGE
