--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -53,6 +53,8 @@ server:
 logging:
   file:
     name: logs/application_logs.txt
+  level:
+    org.springframework.data.mongodb.core.convert.QueryMapper: ERROR # Disable to avoid mapping log population.
 
 app:
   consumers: 10 # number of processing queue consumers.
