--- a/docs/api/submissions/operations/internal/SubmitInternal.yaml
+++ b/docs/api/submissions/operations/internal/SubmitInternal.yaml
@@ -27,8 +27,34 @@ parameters:
     type: string
 
   - in: query
+    name: onBehalf
+    description:
+      In case the submission is performed on behalf of another user, the submission owner's email should be placed in
+      this parameter.
+    required: false
+    type: string
+  - in: query
+    name: register
+    description:
+      In case the submission is performed on behalf of another user, this parameter indicates whether a new user should
+      be registered in case the given owner doesn't exist.
+    required: false
+    type: string
+  - in: query
+    name: name
+    description: Name that will be used to create the new user in case the "register" parameter is set to true.
+    required: false
+    type: string
+  - in: query
     name: preferredSource
     description: Indicates the preferred files source. Valid values are SUBMISSION or USER_SPACE.
+  - in: query
+    name: attributes
+    description: |
+      List of attributes that allow overriding any value at the submission level in the submitted page tab. The
+      values should be passed in the key=value format i.e. title=new title
+    required: false
+    type: string
 
 requestBody:
   required: true
@@ -59,6 +85,6 @@ responses:
     description: OK
     content:
       application/json:
-        $ref: '../model/BasicSubmission.yaml'
+        $ref: '../../model/BasicSubmission.yaml'
   401:
     description: Caused by an invalid X-SESSION-TOKEN
