--- a/docs/api/submissions/operations/internal/DirectSubmitInternal.yaml
+++ b/docs/api/submissions/operations/internal/DirectSubmitInternal.yaml
@@ -1,5 +1,5 @@
 post:
-  summary: Async Direct Submission
+  summary: Direct Submission
   description: |
     Perform a submission to BioStudies using the page tab inside the given file. Please be have in mind the following:
     * The given page tab should match the format in the file i.e. if the file is submission.json, it should contain JSON format.
@@ -9,18 +9,48 @@ post:
     * If an accession number is provided, the submission will be treated as a resubmission which will perform an update
 
   tags:
-    - Async Submissions
+    - Submissions
 
   parameters:
-  - in: header
-    name: X-SESSION-TOKEN
-    description: User authentication token
-    required: true
-    type: string
+    - in: header
+      name: X-SESSION-TOKEN
+      description: User authentication token
+      required: true
+      type: string
+
+    - in: query
+      name: onBehalf
+      description:
+        In case the submission is performed on behalf of another user, the submission owner's email should be placed in
+        this parameter.
+      required: false
+      type: string
+    - in: query
+      name: register
+      description:
+        In case the submission is performed on behalf of another user, this parameter indicates whether a new user 
+        should be registered in case the given owner doesn't exist.
+      required: false
+      type: string
+    - in: query
+      name: name
+      description: Name that will be used to create the new user in case the "register" parameter is set to true.
+      required: false
+      type: string
 
   requestBody:
     required: true
     content:
+      application/x-www-form-urlencoded:
+        schema:
+          type: object
+          properties:
+            attributes:
+              description:
+                List of attributes that allow overriding any value at the submission level in the submitted page tab. The
+                values should be passed in the key=value format i.e. title=new title
+              required: false
+              type: string
       multipart/form-data:
         schema:
           type: object
@@ -43,5 +73,8 @@ post:
   responses:
     200:
       description: OK
+      content:
+        application/json:
+          $ref: '../../model/BasicSubmission.yaml'
     401:
       description: Caused by an invalid X-SESSION-TOKEN
