added dynamic notifications

--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -46,10 +46,12 @@ app:
     filesDirPath:
     magicDirPath:
     requireActivation: false
-  notifications:
-    smtp:
   validator:
     euToxRiskValidationApi: # EU-ToxRisk validation API
   featureFlags:
     tsvPagetabExtension: true
+  notifications:
+    requestQueue: submission-request-submitter-queue # queue used to handle request stages
+    requestRoutingKey: bio.submission.requested # request messages routing key
+
 
