--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -57,6 +57,7 @@ logging:
     org.springframework.data.mongodb.core.convert.QueryMapper: ERROR # Disable to avoid mapping log population.
 
 app:
+  enablePropertiesLog: true
   consumers: 10 # number of processing queue consumers.
   maxConsumers: 15 # Max number of processing queue consumers.
   submissionPath: # Absolute path to the folder to be used as submission storage
@@ -95,4 +96,6 @@ app:
     migration-package: ac.uk.ebi.biostd.persistence.doc.migrations
   validator:
     euToxRiskValidationApi: # EU-ToxRisk validation API
-  enablePropertiesLog: true
+  notifications:
+    requestQueue: submission-request-submitter-queue # queue used to handle request stages
+    requestRoutingKey: bio.submission.requested # request messages routing key
