Pivotal # 185029569: Releaser Not Taking Same Day Submissions
- Fix the filter used to list the submissions pending to be released
- Add debug logging to the mongo queries
- Improve the releaser CI related tasks definition

--- a/ci/submission-releaser.yml
+++ b/ci/submission-releaser.yml
@@ -1,4 +1,33 @@
+.deploy-dev-releaser-task:
+  stage: deploy-dev-releaser-task
+  when: manual
+  dependencies:
+    - build-test
+  script: gradle :scheduler:tasks:submission-releaser-task:bootJar updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
+
+auto-deploy-dev-releaser-task:
+  extends: .deploy-dev-releaser-task
+  stage: auto-deploy-dev-releaser-task
+  only:
+    refs:
+      - master
+
+.deploy-beta-releaser-task:
+  stage: deploy-beta-releaser-task
+  when: manual
+  dependencies:
+    - build-test
+  script: gradle :scheduler:tasks:submission-releaser-task:bootJar updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/beta/apps
+
+auto-deploy-beta-releaser-task:
+  extends: .deploy-beta-releaser-task
+  stage: auto-deploy-beta-releaser-task
+  only:
+    refs:
+      - beta
+
 .deploy-prod-releaser-task:
+  when: manual
   dependencies:
     - build-test
   script: gradle :scheduler:tasks:submission-releaser-task:bootJar updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/prod/apps
@@ -9,22 +38,3 @@ auto-deploy-prod-releaser-task:
   only:
     refs:
       - prod
-
-deploy-dev-releaser-task:
-  stage: deploy-dev-releaser-task
-  when: manual
-  dependencies:
-    - build-test
-  script: gradle :scheduler:tasks:submission-releaser-task:bootJar updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/dev/apps
-
-deploy-beta-releaser-task:
-  stage: deploy-beta-releaser-task
-  when: manual
-  dependencies:
-    - build-test
-  script: gradle :scheduler:tasks:submission-releaser-task:bootJar updateReleaserArtifact -Penv=codon -PdeployPath=$CODON_APPS_PATH/scheduler/beta/apps
-
-deploy-prod-releaser-task:
-  extends: .deploy-prod-releaser-task
-  stage: deploy-prod-releaser-task
-  when: manual
