--- a/scheduler/tasks/submission-releaser-task/src/main/resources/application.yml
+++ b/scheduler/tasks/submission-releaser-task/src/main/resources/application.yml
@@ -12,6 +12,15 @@ spring:
   main:
     web-application-type: none
 
+logging:
+  level:
+    org:
+      springframework:
+        data:
+          mongodb:
+            core:
+              MongoTemplate: DEBUG
+
 app:
   mode: # Releaser mode: RELEASE, NOTIFY, GENERATE_FTP_LINKS
   bioStudies:
