Pivotal # 185029569: Releaser Not Taking Same Day Submissions
- Remove debug properties
- Fix gitlab stages

--- a/ci/submission-releaser.yml
+++ b/ci/submission-releaser.yml
@@ -27,6 +27,7 @@ auto-deploy-beta-releaser-task:
       - beta
 
 .deploy-prod-releaser-task:
+  stage: deploy-prod-releaser-task
   when: manual
   dependencies:
     - build-test
