Pivotal ID # 184724563: Use a specific user and server for the update script (#720)
* [Finishes #184724563] Use a specific user and server for the update script

* Fix user and host when deploying

---------

Co-authored-by: Jhoan Munoz <jhoanmanuelms@gmail.com>

--- a/deploy.gradle
+++ b/deploy.gradle
@@ -129,10 +129,14 @@ task deploy {
                 put from: "$rootDir/$artifactPath/$artifactName", into: "$deployPath/$artifactName"
                 put from: "$rootDir/ci/update.sh", into: "$deployPath/update.sh"
 
+                def user = execute "whoami"
+                def host = execute "hostname -s"
                 execute "sed -i -e 's~APP_PATH~$deployPath~g' $deployPath/update.sh"
                 execute "sed -i -e 's~APP_PORT~$appPort~g' $deployPath/update.sh"
                 execute "sed -i -e 's~APP_NAME~$artifactName~g' $deployPath/update.sh"
                 execute "sed -i -e 's~DEBUG_PORT~$debugPort~g' $deployPath/update.sh"
+                execute "sed -i -e 's~BS_USER~$user~g' $deployPath/update.sh"
+                execute "sed -i -e 's~HOST~$host~g' $deployPath/update.sh"
 
                 if (project.hasProperty("jvmParams")) {
                     execute "sed -i -e 's~JVM_PARAMS~$jvmParams~g' $deployPath/update.sh"
