--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -43,9 +43,11 @@ app:
   security:
     tokenHash: biostd-test
     environment: TEST
-    filesDirPath:
-    magicDirPath:
     requireActivation: false
+    filesProperties:
+      filesDirPath:
+      magicDirPath:
+      defaultMode: NFS
   validator:
     euToxRiskValidationApi: # EU-ToxRisk validation API
   featureFlags:
