--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -40,6 +40,12 @@ app:
     username: # FIRE user
     password: # FIRE password
     version: v1.1
+    s3:
+      accessKey: anyAccessKey
+      secretKey: anySecreteKey
+      region: anyRegion
+      endpoint: anyEndpoint
+      bucket: anyBucket
   security:
     captchaKey: # Captcha validation token. Not required for local environment
     checkCaptcha: false
