added user folder ftp support

--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -45,9 +45,13 @@ app:
     environment: TEST
     requireActivation: false
     filesProperties:
+      defaultMode: NFS
       filesDirPath:
       magicDirPath:
-      defaultMode: NFS
+      ftpUser:
+      ftpPassword:
+      ftpUrl:
+      ftpPort:
   validator:
     euToxRiskValidationApi: # EU-ToxRisk validation API
   featureFlags:
