--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,7 @@ include("client:bio-webclient")
 include("client:bio-webclient-demo")
 include("client:bio-commandline")
 include("client:fire-webclient")
+include("client:ftp-webclient")
 
 include("events:events-publisher")
 include("bio-admin")
@@ -46,3 +47,5 @@ include("scheduler:common:task-properties")
 include("scheduler:tasks:exporter-task")
 include("scheduler:tasks:pmc-processor-task")
 include("scheduler:tasks:submission-releaser-task")
+
+
