--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ build-test:
 nfs-itest:
   needs: [ "build-test" ]
   stage: nfs-itest
-  script: gradle clean :submission:submission-webapp:itest -PenableFire=false --rerun-tasks --stacktrace
+  script: gradle clean :submission:submission-webapp:itest --tests ac.uk.ebi.biostd.itest.test.files.UserFileApiTest -PenableFire=false --rerun-tasks --stacktrace
 
 fire-itest:
   needs: [ "nfs-itest" ]
