--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,7 @@ include("client:bio-webclient")
 include("client:bio-webclient-demo")
 include("client:bio-commandline")
 include("client:fire-webclient")
+include("client:ftp-webclient")
 
 include("events:events-publisher")
 include("bio-admin")
