--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -97,6 +97,7 @@ app:
       prod: # Instance key for the submission tool PROD environment
   persistence:
     enableFire: true
+    concurrency: # Number of files processed concurrently
   mongo:
     execute-migrations: true
     migration-package: ac.uk.ebi.biostd.persistence.doc.migrations
