Pivotal ID # 185460059: Retry E-Mails Only Once
- Catch errors on security notifications
- Use spring logs rolling back policy in order to compress the old log files

--- a/submission/submission-handlers/src/main/resources/application.yml
+++ b/submission/submission-handlers/src/main/resources/application.yml
@@ -22,6 +22,15 @@ spring:
     username: # RabbitMQ user
     password: # RabbitMQ password
 
+
+logging:
+  file:
+    path: logs
+  logback:
+    rollingpolicy:
+      file-name-pattern: logs/start_logs.%d{yyyy-MM-dd}.%i.log.gz
+      max-file-size: 100MB
+
 app:
   notifications:
     smtp: smtp.ebi.ac.uk
