--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -54,3 +54,8 @@ app:
     magicDirPath: # Absolute path to the folder to be used for the user/groups magic folders links
     environment: LOCAL
     requireActivation: false
+  doi:
+    endpoint: https://test-endpoint.org
+    uiUrl: https://www.biostudies.ac.uk
+    user: a-user
+    password: a-password
