--- a/settings.gradle
+++ b/settings.gradle
@@ -47,3 +47,4 @@ include("scheduler:common:task-properties")
 include("scheduler:tasks:exporter-task")
 include("scheduler:tasks:pmc-processor-task")
 include("scheduler:tasks:submission-releaser-task")
+include("scheduler:tasks:submission-migrator-task")
