Pivotal ID # 185352396: Fixed Concurrency File Operations (#733)
* Pivotal ID # 185352396: Fixed Concurrency File Operations

- Process the files concurrently
- Include a new property to configure the number of files to be processed concurrently
- Retrieve the request files using flows instead of sequences
- Implement a coroutine compatible retry template
- Added async operations

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -102,6 +102,7 @@ app:
       ftpPort: # the ftp port
   persistence:
     enableFire: true
+    concurrency: # Number of files processed concurrently
   mongo:
     execute-migrations: true
     migration-package: ac.uk.ebi.biostd.persistence.doc.migrations
