--- a/submission/submission-webapp/src/itest/resources/log4j.properties
+++ b/submission/submission-webapp/src/itest/resources/log4j.properties
@@ -1,3 +1,4 @@
+# Update to INFO for full logs in IT.
 log4j.rootLogger=ERROR, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
