Pivotal ID # 171382047:  Automate Stats Publishing
- Create a task to report the submission stats
- Update the collections constant to the updated term

--- a/deploy.gradle
+++ b/deploy.gradle
@@ -112,6 +112,15 @@ task updateReleaserArtifact {
     finalizedBy "deployArtifact"
 }
 
+task updateStatsReporterArtifact {
+    doFirst {
+        project.ext.artifactPath = "scheduler/tasks/stats-reporter-task/build/libs"
+        project.ext.artifactName = "stats-reporter-task-1.0.0.jar"
+    }
+
+    finalizedBy "deployArtifact"
+}
+
 task deployArtifact {
     doLast {
         ssh.run {
