--- a/settings.gradle
+++ b/settings.gradle
@@ -46,4 +46,5 @@ include("scheduler:common:cluster-client")
 include("scheduler:common:task-properties")
 include("scheduler:tasks:exporter-task")
 include("scheduler:tasks:pmc-processor-task")
+include("scheduler:tasks:stats-reporter-task")
 include("scheduler:tasks:submission-releaser-task")
