Pivotal ID # 185352396: Fixed Concurrency File Operations
- Fully suspended endpoints
- Use supervisor scope instead of default dispatchers
- Remove spring async timeout

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
       client:
         enabled: false
 
+  mvc:
+    async:
+      request-timeout: -1
+
   data:
     mongodb:
       database: # Mongo Database Name
