code review changes

--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -18,7 +18,7 @@ spring:
 
   mvc:
     async:
-      request-timeout: -1
+      request-timeout: 180000 # 3 minutes
 
   rabbitmq:
     username: guest
